# Qdip

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: main.cpp
src/implement/: DipImageProvider.cpp
src/implement/process/: ConvertToGrayImage.cpp
src/include/: DipImageProvider.h
src/include/process/: ConvertToGrayImage.h
src/resource/: main.qml  qml.qrc
src/resource/component/: ItemRect.qml
src/resource/page/: IndexPage.qml
